<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.neighbour_list.InfosNeighbourActivity">

    <ImageView
        android:id="@+id/item_info_avatar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/item_info_back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="@id/item_info_avatar"
        app:layout_constraintTop_toTopOf="@id/item_info_avatar"/>

    <TextView
        android:id="@+id/item_avatar_name"
        android:text="Caroline"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="@id/item_info_avatar"
        app:layout_constraintStart_toStartOf="@id/item_info_avatar" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_info_avatar">
    <TextView
        android:id="@+id/item_info_name"
        android:text="Caroline"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"/>
        <TextView
            android:id="@+id/item_info_address"
            android:drawableStart="@drawable/ic_baseline_place_24"
            android:textColor="@color/black"
            android:drawablePadding="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/item_info_phone_number"
            android:drawableStart="@drawable/ic_baseline_local_phone_24"
            android:textColor="@color/black"
            android:drawablePadding="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="100dp"/>
        <TextView
            android:id="@+id/item_info_web_address"
            android:drawableStart="@drawable/ic_baseline_language_24"
            android:textColor="@color/black"
            android:drawablePadding="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="150dp"/>

    </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/about_me_cardview"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/cardview">

            <TextView
                android:id="@+id/item_about_me_title"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="A propos de moi"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/item_info_about_me"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="60dp" />
        </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="344dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@id/item_info_avatar"
        app:layout_constraintStart_toStartOf="@id/item_info_avatar"
        app:layout_constraintTop_toBottomOf="@+id/item_info_avatar"
        app:srcCompat="@drawable/ic_star_border_white_24dp"/>

</android.support.constraint.ConstraintLayout>